# AnonChat

./: README.md  TODO.md
.github/workflows/: pages.yml
backend/: CMakeLists.txt  Dockerfile  README.md
backend/src/: main.cpp  room.cpp  room.h  user.cpp  user.h
frontend/: app.js  index.html  style.css
